# haskell-native-gui

./: CHANGELOG.md  ChangeLog.md  LICENSE  README.md  haskell-native-gui.cabal  stack.yaml
app/: Main.hs
graphics-primitives/: .gitignore  graphics-primitives.cabal  package.yaml
graphics-primitives-opengl/: graphics-primitives-opengl.cabal  package.yaml  test.frag.glsl  test.vert.glsl
graphics-primitives-opengl/app/: Main.hs
graphics-primitives/src/Graphics/: Primitives.hs
graphics-primitives/src/Graphics/Primitives/: Backend.hs  Common.hs  Scene.hs
graphics-primitives/test/Graphics/Primitives/: CommonSpec.hs
scenegraph/: scenegraph.cabal
scenegraph/app/: Main.hs
scenegraph/src/: SceneGraph.hs
src/: HaskellNativeGui.hs
