cabal-version:       2.0
name:                haskell-native-gui
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/CLowcay/haskell-native-gui
bug-reports:         https://github.com/CLowcay/haskell-native-gui/issues
license:             BSD3
license-file:        LICENSE
author:              Callum Lowcay
maintainer:          cwslowcay@gmail.com
copyright:           2018 Callum Lowcay
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/CLowcay/haskell-native-gui.git

library
  hs-source-dirs:      src
  exposed-modules:     HaskellNativeGui
                       

  build-depends:       base ^>= 4.11.1.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable haskell-native-gui
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , haskell-native-gui
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
